# nudge

./: .gitignore  Dockerfile  README.md  env.example  pyproject.toml
deployment/: README.md
deployment/configs/: nginx.conf
deployment/docs/: DEPLOYMENT.md
deployment/scripts/: deploy.sh  download_s3.py  setup-ssl.sh
src/: bot.py  graph.py  interface.py  pipeline.py
src/memory/: memory_test.py
